@@ -1,3 +1,7 @@
+2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* sound-properties-capplet.c: s/PACKAGE/GETTEXT_PACKAGE/g
+
 2002-02-11  Seth Nickell  <snickell@stanford.edu>
 
 	* sound-properties-capplet.c: (setup_dialog),
